# mamboProject

./: CMakeLists.txt  GPS_point.cpp  README.md  arma  destinationPoint.cpp  peakDetector6.py  peakDetectorPro.py
Piksi_data_logger/: CMakeLists.txt  PIKSI.h  piksi_datalogger.c
Piksi_data_logger1/: CMakeLists.txt  piksi  piksi_datalogger.c
build.old/: Makefile  cmake_install.cmake  test.txt
lib/: ADXL345.cpp  ADXL345.h  COMPASS.cpp  COMPASS.h  HMC5843.cpp  HMC5843.h  RELATIVE_DISTANCE.cpp  RELATIVE_DISTANCE.h  X.txt  compass.cpp  config.h  testADXL345  testADXL345.cpp  testCompass.cpp  testcompass
libcopy/: ADXL345.cpp  ADXL345.h  COMPASS.h  ITG3205.cpp  ITG3205.h  LAT_LON.cpp  compass.cpp  hmc5883l.cpp
logs/: 20180914_120235test.csv  20180914_123314test.csv  20180914_123808test.csv
logs/data/: 2018-09-20_163820_dataLog.cvs
logs/events/: 2018-09-20_163820_eventLog.cvs
old lib/: COMPASS.h  HMC5843.h  RELATIVE_DISTANCE.cpp  RELATIVE_DISTANCE.h  compass.cpp  hmc5843.cpp
test/: CMakeLists.txt  LAT_LON.cpp  LAT_LON.h  configureHMC5883L.cpp  examplei2c.cpp  itg3205test.cpp  latlon.cpp  latlon2.cpp  latlont  latlont2  testADXL345  testADXL345.cpp  testCompass.cpp  testI2C.cpp
test/libs/: HMC5883L.h  RELATIVE_DISTANCE.cpp  RELATIVE_DISTANCE.h  destinationPoint.cpp  tesRel.cpp
